--- a/planets.html
+++ b/planets.html
@@ -4,7 +4,7 @@
     <style>
     
       .planet{ position:absolute; } 
-      #desert-planet { top:40px; left:20px; }
+      #desert-planet { top:40px; left:20px; width:100px; height:100px; }
       
     </style>
   </head>
