--- a/planets.html
+++ b/planets.html
@@ -3,12 +3,12 @@
     <title> 4x </title>
     <style>
     
-      .planet{ position:absolute; } 
+      .planet{ position:absolute; image-rendering:pixelated;} 
       #desert-planet { top:40px; left:20px; width:100px; height:100px; }
       
     </style>
   </head>
   <body>
-    <div class="planet" id="desert-planet" src="desertplanet1.png">  </div> <!--Desert Planet Img---->
+    <img class="planet" id="desert-planet" src="desertplanet1.png">  </img> <!--Desert Planet Img---->
   </body>
 </html>
