--- a/planets.html
+++ b/planets.html
@@ -3,8 +3,8 @@
     <title> 4x </title>
     <style>
     
-      .planet{ position:absolute; image-rendering:pixelated;} 
-      #desert-planet { top:40px; left:20px; width:100px; height:100px; }
+      .planet{ position:absolute; image-rendering:pixelated; width:70px; height:70px; } 
+      #desert-planet { top:40px; left:20px; }
       
     </style>
   </head>
