--- a/planets.html
+++ b/planets.html
@@ -4,11 +4,13 @@
     <style>
     
       .planet{ position:absolute; image-rendering:pixelated; width:70px; height:70px; } 
-      #desert-planet { top:40px; left:20px; }
+      #desert-planet { top:40px; left:40px; }
+      #ocean-planet { top:40px; left:120px; }
       
     </style>
   </head>
   <body>
     <img class="planet" id="desert-planet" src="desertplanet1.png">  </img> <!--Desert Planet Img---->
+    <img class="planet" id="ocean-planet" src="oceanplanet1.png">  </img> <!--Ocean Planet Img---->
   </body>
 </html>
