--- a/planets.html
+++ b/planets.html
@@ -4,8 +4,8 @@
     <style>
     
       .planet{ position:absolute; image-rendering:pixelated; width:70px; height:70px; } 
-      #desert-planet { top:40px; left:40px; }
-      #ocean-planet { top:40px; left:120px; }
+      #desert-planet { top:40px; left:50px; }
+      #ocean-planet { top:40px; left:150px; }
       
     </style>
   </head>
@@ -14,3 +14,4 @@
     <img class="planet" id="ocean-planet" src="oceanplanet1.png">  </img> <!--Ocean Planet Img---->
   </body>
 </html>
+<!--Version 0.0.4--->
