--- a/planets.html
+++ b/planets.html
@@ -4,14 +4,16 @@
     <style>
     
       .planet{ position:absolute; image-rendering:pixelated; width:50px; height:50px; } 
-      #desert-planet { top:40px; left:50px; }
-      #ocean-planet { top:40px; left:150px; }
+      #desert-planet { top:50px; left:100px; }
+      #ocean-planet { top:50px; left:200px; }
+      #savanna-planet { top:50px; left:300px; }
       
     </style>
   </head>
   <body>
     <img class="planet" id="desert-planet" src="desertplanet1.png">  </img> <!--Desert Planet Img---->
     <img class="planet" id="ocean-planet" src="oceanplanet1.png">  </img> <!--Ocean Planet Img---->
+    <img class="planet" id="savanna-planet" src="savannaplanet1.png">  </img> <!--Savanna Planet Img---->
   </body>
 </html>
-<!--Version 0.0.0.4--->
+<!--Version 0.0.0.5--->
