--- a/planets.html
+++ b/planets.html
@@ -7,6 +7,7 @@
       #desert-planet { top:50px; left:100px; }
       #ocean-planet { top:50px; left:200px; }
       #savanna-planet { top:50px; left:300px; }
+      #tundra-planet { top:50px; left:400px; } 
       
     </style>
   </head>
@@ -14,6 +15,7 @@
     <img class="planet" id="desert-planet" src="desertplanet1.png">  </img> <!--Desert Planet Img---->
     <img class="planet" id="ocean-planet" src="oceanplanet1.png">  </img> <!--Ocean Planet Img---->
     <img class="planet" id="savanna-planet" src="savannaplanet1.png">  </img> <!--Savanna Planet Img---->
+    <img class="planet" id="tundra-planet" src="tundraplanet1.png">  </img> <!--Tundra Planet Img---->
   </body>
 </html>
-<!--Version 0.0.0.5--->
+<!--Version 0.0.0.6--->
