--- a/planets.html
+++ b/planets.html
@@ -8,8 +8,9 @@
       #desert-planet { top:50px; left:100px; }
       #savanna-planet { top:50px; left:200px; }
       #arctic-planet { top:50px; left:300px }
-      #tundra-planet { top:50px; left:400px; } 
-      #ocean-planet { top:50px; left:500px; }
+      #tundra-planet { top:50px; left:400px; }
+      #continental-planet { top:50px; left:500px; }
+      #ocean-planet { top:50px; left:600px; }
       
     </style>
   </head>
@@ -18,7 +19,8 @@
     <img class="planet" id="savanna-planet" src="savannaplanet1.png">  </img> <!--Savanna Planet Img---->
     <img class="planet" id="arctic-planet" src="arcticplanet1.png">  </img> <!--Arctic Planet Img---->
     <img class="planet" id="tundra-planet" src="tundraplanet1.png">  </img> <!--Tundra Planet Img---->
+    <img class="planet" id="continental-planet" src="continentalplanet1.png">  </img> <!--Continental Planet Img---->
     <img class="planet" id="ocean-planet" src="oceanplanet1.png">  </img> <!--Ocean Planet Img---->
   </body>
 </html>
-<!--Version 0.0.0.7--->
+<!--Version 0.0.0.8--->
