--- a/planets.html
+++ b/planets.html
@@ -6,7 +6,7 @@
       .background { position:absolute; width:800px; height:200px; }
       #background1 { top:40px; left:60px; background: black; }
       
-      .planet { position:absolute; image-rendering:pixelated; width:50px; height:50px; background:grey; border-radius:50%;}
+      .planet { position:absolute; image-rendering:pixelated; width:50px; height:50px; background:grey; border-radius:50%; transition:0.5s; }
       
       #desert-planet { top:50px; left:100px; }
       #savanna-planet { top:50px; left:200px; }
@@ -31,7 +31,7 @@
       function select(el) {
         var thisPlanet = document.getElementById("desert-planet");
         thisPlanet.style.backgroundColor = "lime";
-        thisPlanet.style.padding = "2px";
+        thisPlanet.style.padding = "1.5px";
       }
     </script>
   </body>
