--- a/planets.html
+++ b/planets.html
@@ -20,11 +20,11 @@
   <body>
     <div class="background" id="background1">
     <img class="planet" id="desert-planet" src="desertplanet1.png" onmouseover="select(this)" onclick="deselect(this)">  </img> <!--Desert Planet Img---->
-    <img class="planet" id="savanna-planet" src="savannaplanet1.png">  </img> <!--Savanna Planet Img---->
-    <img class="planet" id="arctic-planet" src="arcticplanet1.png">  </img> <!--Arctic Planet Img---->
-    <img class="planet" id="tundra-planet" src="tundraplanet1.png">  </img> <!--Tundra Planet Img---->
-    <img class="planet" id="continental-planet" src="continentalplanet1.png">  </img> <!--Continental Planet Img---->
-    <img class="planet" id="ocean-planet" src="oceanplanet1.png">  </img> <!--Ocean Planet Img---->
+    <img class="planet" id="savanna-planet" src="savannaplanet1.png" onmouseover="select(this)" onclick="deselect(this)">  </img> <!--Savanna Planet Img---->
+    <img class="planet" id="arctic-planet" src="arcticplanet1.png" onmouseover="select(this)" onclick="deselect(this)">  </img> <!--Arctic Planet Img---->
+    <img class="planet" id="tundra-planet" src="tundraplanet1.png" onmouseover="select(this)" onclick="deselect(this)">  </img> <!--Tundra Planet Img---->
+    <img class="planet" id="continental-planet" src="continentalplanet1.png" onmouseover="select(this)" onclick="deselect(this)">  </img> <!--Continental Planet Img---->
+    <img class="planet" id="ocean-planet" src="oceanplanet1.png" onmouseover="select(this)" onclick="deselect(this)">  </img> <!--Ocean Planet Img---->
     </div>
 
     <script>
@@ -39,4 +39,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.14--->
+<!--Version 0.15--->
