--- a/planets.html
+++ b/planets.html
@@ -19,12 +19,12 @@
   </head>
   <body>
     <div class="background" id="background1">
-    <img class="planet" id="desert-planet" src="desertplanet1.png" onmouseenter="select(this)" onmouseexit="deselect(this)">  </img> <!--Desert Planet Img---->
-    <img class="planet" id="savanna-planet" src="savannaplanet1.png" onmouseenter="select(this)" onmouseexit="deselect(this)">  </img> <!--Savanna Planet Img---->
-    <img class="planet" id="arctic-planet" src="arcticplanet1.png" onmouseenter="select(this)" onmouseexit="deselect(this)">  </img> <!--Arctic Planet Img---->
-    <img class="planet" id="tundra-planet" src="tundraplanet1.png" onmouseenter="select(this)" onmouseexit="deselect(this)">  </img> <!--Tundra Planet Img---->
-    <img class="planet" id="continental-planet" src="continentalplanet1.png" onmouseenter="select(this)" onmouseexit="deselect(this)">  </img> <!--Continental Planet Img---->
-    <img class="planet" id="ocean-planet" src="oceanplanet1.png" onmouseenter="select(this)" onmouseexit="deselect(this)">  </img> <!--Ocean Planet Img---->
+    <img class="planet" id="desert-planet" src="desertplanet1.png" onmouseenter="select(this)" onmouseout="deselect(this)">  </img> <!--Desert Planet Img---->
+    <img class="planet" id="savanna-planet" src="savannaplanet1.png" onmouseenter="select(this)" onmouseout="deselect(this)">  </img> <!--Savanna Planet Img---->
+    <img class="planet" id="arctic-planet" src="arcticplanet1.png" onmouseenter="select(this)" onmouseout="deselect(this)">  </img> <!--Arctic Planet Img---->
+    <img class="planet" id="tundra-planet" src="tundraplanet1.png" onmouseenter="select(this)" onmouseout="deselect(this)">  </img> <!--Tundra Planet Img---->
+    <img class="planet" id="continental-planet" src="continentalplanet1.png" onmouseenter="select(this)" onmouseout="deselect(this)">  </img> <!--Continental Planet Img---->
+    <img class="planet" id="ocean-planet" src="oceanplanet1.png" onmouseenter="select(this)" onmouseout="deselect(this)">  </img> <!--Ocean Planet Img---->
     </div>
 
     <script>
@@ -39,4 +39,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.16--->
+<!--Version 0.17--->
