--- a/planets.html
+++ b/planets.html
@@ -3,6 +3,7 @@
     <title> 4x Planet Showcase </title>
     <style>
     
+      body { background:#030a17; }
       .planet { position:absolute; image-rendering:pixelated; width:50px; height:50px; background:grey; border-radius:50%; transition:0.5s; }
       
       #desert-planet { top:50px; left:100px; }
@@ -35,4 +36,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.17--->
+<!--Version 0.19--->
