--- a/planets.html
+++ b/planets.html
@@ -16,7 +16,7 @@
       .info-box { 
         position:absolute;
         width: 170px;
-        height: 300px;
+        height: auto;
         font-family: 'MedievalSharp', cursive; 
         font-size:80%;
         border: 2px solid gray;
@@ -42,7 +42,7 @@
       .cost { grid-area: cost; text-align:right; }
       .desc { grid-area: desc; text-align:center; }
       .pop { grid-area: pop; text-align:left; }
-      #desertSurvey { display:null; }
+      #desertSurvey { display:none; top:80px; left:800px; height:300px;}
     </style>
   </head>
   <body>
@@ -77,4 +77,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.20--->
+<!--Version 0.22--->
