--- a/planets.html
+++ b/planets.html
@@ -72,7 +72,7 @@
       }
       function surveyDesert() {
         var survey = document.getElementById("desertSurvey")
-        survey.style.display = inline-grid;
+        survey.style.display = block;
       }
     </script>
   </body>
