--- a/planets.html
+++ b/planets.html
@@ -72,9 +72,9 @@
       }
       function surveyDesert() {
         var survey = document.getElementById("desertSurvey")
-        survey.style.display = block;
+        survey.style.display = "block";
       }
     </script>
   </body>
 </html>
-<!--Version 0.22--->
+<!--Version 0.24--->
