--- a/planets.html
+++ b/planets.html
@@ -25,7 +25,7 @@
         display: inline-grid;
         margin: 15px;
         grid-template-columns: repeat(3, 1fr);
-        grid-auto-rows: 2em 2em 2em 2em 2em;
+        grid-auto-rows: 2em 2em 2em 2em;
         grid-template-areas:
           "name  name  sprite"
           "habit habit cost"
@@ -36,7 +36,7 @@
         background: #c2bebe;
         transition:0.4s;
       }
-      .cell { background: #efefef; padding: 3px; position: relative; border: solid grey 0.3px; }
+      .cell { background: #efefef; padding: 3px; position: relative; }
       .cell p { font-family: 'MedievalSharp', cursive; }
       .name { grid-area:name; text-align:center; }
       .name p { white-space: nowrap; }
@@ -44,7 +44,7 @@
       .cost { grid-area: cost; text-align:right; }
       .desc { grid-area: desc; text-align:center; }
       .pop { grid-area: pop; text-align:center; }
-      #desertSurvey { display:none; top:80px; left:800px; height:300px;}
+      #desertSurvey { display:none; top:80px; left:900px; height:300px;}
     </style>
   </head>
   <body>
@@ -80,4 +80,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.25--->
+<!--Version 0.26--->
