--- a/planets.html
+++ b/planets.html
@@ -20,7 +20,7 @@
         height: auto;
         font-family: 'MedievalSharp', cursive; 
         font-size:80%;
-        border: 2px solid gray;
+        border: 2px solid white;
         border-radius: 20%;
         display: inline-grid;
         margin: 15px;
@@ -33,7 +33,7 @@
           "desc  desc  desc"
           "pop   pop   pop";
         gap: 2px;
-        background: #c2bebe;
+        background: #34b4eb;
         transition:0.4s;
       }
       .cell { background: #efefef; padding: 3px; position: relative; }
@@ -80,4 +80,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.26--->
+<!--Version 0.27--->
