--- a/planets.html
+++ b/planets.html
@@ -28,7 +28,7 @@
         grid-auto-rows: 30px 48px 48px 96px 48px 30px;
         grid-template-areas:
           "top   top   top"
-          "name  name  desertSprite"
+          "name  name  sprite"
           "habit habit cost"
           "desc  desc  desc"
           "pop   pop   pop"
@@ -87,4 +87,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.33--->
+<!--Version 0.34--->
