--- a/planets.html
+++ b/planets.html
@@ -37,12 +37,12 @@
         background: #1d4b96;
         transition:0.4s;
       }
-      .cell { background: gray; padding: 3px; position: relative; overflow:hidden; font-size:70%; }
-      .cell p { font-family: 'MedievalSharp', cursive; }
+      .cell { background: lightgray; padding: 3px; position: relative; overflow:hidden; font-size:80%; }
+      .cell p { font-family: 'MedievalSharp', cursive; font-size:90%; }
       .name { grid-area: name; text-align:center; }
       .name p { white-space: nowrap; }
       .sprite { grid-area:sprite; }
-      .desertSprite {}
+      .desertSprite {  }
       .habit { grid-area:habit; text-align:left; }
       .cost { grid-area: cost; text-align:right; }
       .desc { grid-area: desc; text-align:center; }
@@ -87,4 +87,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.35--->
+<!--Version 0.36--->
