--- a/planets.html
+++ b/planets.html
@@ -66,7 +66,7 @@
       <div class="cell name"><p> [variable] </p></div>
       <img class="cell sprite desertSprite" src="desertplanet1.png"></img>
       <div class="cell habit"><p> [% Habitability] </p></div>
-      <div class="cell habit"><p> [# of Credits in Upkeep Cost] </p></div>
+      <div class="cell cost"><p> [# of Credits in Upkeep Cost] </p></div>
       <div class="cell desc"><p> This is a desert planet, harsh and unforgiving, [yet suitable/tolerable/very inhabitable] to your species. </p></div>
       <div class="cell pop"><p> This planet contains [#] of Population Units. </p></div>
       <div class="cell bottom"></div>
@@ -87,4 +87,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.36--->
+<!--Version 0.37--->
