--- a/planets.html
+++ b/planets.html
@@ -25,7 +25,7 @@
         display: inline-grid;
         margin: 15px;
         grid-template-columns: repeat(3, 1fr);
-        grid-auto-rows: 30px 48px 48px 96px 48px 30px;
+        grid-auto-rows: 5px 58px 58px 116px 58px 5px;
         grid-template-areas:
           "top   top   top"
           "name  name  sprite"
@@ -33,7 +33,7 @@
           "desc  desc  desc"
           "pop   pop   pop"
           "bottom bottom bottom";
-        gap: 1px;
+        gap: 2px;
         background: #1d4b96;
         transition:0.4s;
       }
@@ -41,10 +41,10 @@
       .cell p { font-family: 'MedievalSharp', cursive; font-size:90%; }
       .name { grid-area: name; text-align:center; }
       .name p { white-space: nowrap; }
-      .sprite { grid-area:sprite; }
+      .sprite { grid-area:sprite; image-rendering:pixelated; }
       .desertSprite {  }
-      .habit { grid-area:habit; text-align:left; }
-      .cost { grid-area: cost; text-align:right; }
+      .habit { grid-area:habit; text-align:center; }
+      .cost { grid-area: cost; text-align:center; }
       .desc { grid-area: desc; text-align:center; }
       .pop { grid-area: pop; text-align:center; }
       .top { grid-area:top; display:none; }
@@ -87,4 +87,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.38--->
+<!--Version 0.40--->
