--- a/planets.html
+++ b/planets.html
@@ -21,23 +21,21 @@
         font-family: 'MedievalSharp', cursive; 
         font-size:80%;
         border: 2px solid white;
-        border-radius: 10%;
+        border-radius: 5px;
         display: inline-grid;
         margin: 15px;
         grid-template-columns: repeat(3, 1fr);
-        grid-auto-rows: 5px 58px 58px 116px 58px 5px;
+        grid-auto-rows: 60px 60px 120px 60px;
         grid-template-areas:
-          "top   top   top"
           "name  name  sprite"
           "habit habit cost"
           "desc  desc  desc"
-          "pop   pop   pop"
-          "bottom bottom bottom";
-        gap: 2px;
+          "pop   pop   pop";
+        gap: 1.75px;
         background: #1d4b96;
         transition:0.4s;
       }
-      .cell { background: lightgray; padding: 3px; position: relative; overflow:hidden; font-size:80%; }
+      .cell { background: lightgray; padding: 3px; position: relative; overflow:hidden; font-size:80%; background:#2055ab; }
       .cell p { font-family: 'MedievalSharp', cursive; font-size:90%; }
       .name { grid-area: name; text-align:center; }
       .name p { white-space: nowrap; }
@@ -47,8 +45,6 @@
       .cost { grid-area: cost; text-align:center; }
       .desc { grid-area: desc; text-align:center; }
       .pop { grid-area: pop; text-align:center; }
-      .top { grid-area:top; display:none; }
-      .bottom { grid-area:bottom; display:none; }
       #desertSurvey { display:none; top:80px; left:900px; height:300px;}
     </style>
   </head>
@@ -87,4 +83,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.40--->
+<!--Version 0.42--->
