--- a/planets.html
+++ b/planets.html
@@ -25,17 +25,18 @@
         display: inline-grid;
         margin: 15px;
         grid-template-columns: repeat(3, 1fr);
-        grid-auto-rows: 60px 60px 120px 60px;
+        grid-auto-rows: 60px 60px 120px 50px 10px;
         grid-template-areas:
           "name  name  sprite"
           "habit habit cost"
           "desc  desc  desc"
-          "pop   pop   pop";
+          "pop   pop   pop"
+          "bottom bottom bottom";
         gap: 1.75px;
         background: #1d4b96;
         transition:0.4s;
       }
-      .cell { background: lightgray; padding: 3px; position: relative; overflow:hidden; font-size:80%; background:#4379d1; }
+      .cell { background: lightgray; padding: 3px; position: relative; overflow:hidden; font-size:80%; background:#a2bbde; }
       .cell p { font-family: 'MedievalSharp', cursive; font-size:90%; }
       .name { grid-area: name; text-align:center; }
       .name p { white-space: nowrap; }
@@ -45,6 +46,7 @@
       .cost { grid-area: cost; text-align:center; }
       .desc { grid-area: desc; text-align:center; }
       .pop { grid-area: pop; text-align:center; }
+      .bottom { grid-area:bottom; gap: 0px; }
       #desertSurvey { display:none; top:80px; left:900px; height:300px;}
     </style>
   </head>
@@ -64,6 +66,7 @@
       <div class="cell cost"><p> [# of Credits in Upkeep Cost] </p></div>
       <div class="cell desc"><p> This is a desert planet, harsh and unforgiving, [yet suitable/tolerable/very inhabitable] to your species. </p></div>
       <div class="cell pop"><p> This planet contains [#] of Population Units. </p></div>
+      <div class="cell bottom"></div>
     </div>
     <script>
       function select(el) {
@@ -81,4 +84,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.43--->
+<!--Version 0.44--->
