--- a/planets.html
+++ b/planets.html
@@ -46,7 +46,7 @@
       .cost { grid-area: cost; text-align:center; }
       .desc { grid-area: desc; text-align:center; }
       .pop { grid-area: pop; text-align:center; }
-      .bottom { grid-area:bottom; gap: 0px; }
+      .bottom { grid-area:bottom; gap: 0px; display:none; }
       #desertSurvey { display:none; top:80px; left:900px; height:300px;}
     </style>
   </head>
@@ -84,4 +84,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.44--->
+<!--Version 0.45--->
