--- a/planets.html
+++ b/planets.html
@@ -25,8 +25,9 @@
         display: inline-grid;
         margin: 15px;
         grid-template-columns: repeat(3, 1fr);
-        grid-auto-rows: 60px 60px 120px 50px 10px;
+        grid-auto-rows: 10px 50px 60px 120px 50px 10px;
         grid-template-areas:
+          "top   top   top"
           "name  name  sprite"
           "habit habit cost"
           "desc  desc  desc"
@@ -46,6 +47,7 @@
       .cost { grid-area: cost; text-align:center; }
       .desc { grid-area: desc; text-align:center; }
       .pop { grid-area: pop; text-align:center; }
+      .top { grid-area:top; gap: 0px; display:none; }
       .bottom { grid-area:bottom; gap: 0px; display:none; }
       #desertSurvey { display:none; top:80px; left:900px; height:300px;}
     </style>
@@ -60,6 +62,7 @@
     <img class="planet" id="ocean-planet" src="oceanplanet1.png" onmouseenter="select(this)" onmouseout="deselect(this)">  </img> <!--Ocean Planet Img---->
     
     <div class="info-box" id="desertSurvey"> <!--Desert--->
+      <div class="cell top"></div>
       <div class="cell name"><p> [variable] </p></div>
       <div class="cell sprite"><img class="cell desertSprite" src="desertplanet1.png"></img></div>
       <div class="cell habit"><p> [% Habitability] </p></div>
@@ -84,4 +87,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.45--->
+<!--Version 0.46--->
