--- a/planets.html
+++ b/planets.html
@@ -20,12 +20,12 @@
         height: auto;
         font-family: 'MedievalSharp', cursive; 
         font-size:80%;
-        border: 2px solid white;
+        border: 2px solid lightgray;
         border-radius: 5px;
         display: inline-grid;
         margin: 15px;
         grid-template-columns: repeat(3, 1fr);
-        grid-auto-rows: 10px 50px 60px 120px 50px 10px;
+        grid-auto-rows: 2px 58px 60px 120px 50px 10px;
         grid-template-areas:
           "top   top   top"
           "name  name  sprite"
@@ -87,4 +87,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.46--->
+<!--Version 0.47--->
