--- a/planets.html
+++ b/planets.html
@@ -41,14 +41,14 @@
       .cell p { font-family: 'MedievalSharp', cursive; font-size:90%; }
       .name { grid-area: name; text-align:center; }
       .name p { white-space: nowrap; }
-      .sprite { grid-area:sprite; image-rendering:pixelated; }
-      .desertSprite {  }
+      .sprite { grid-area:sprite; }
+      .desertSprite { image-rendering:pixelated; }
       .habit { grid-area:habit; text-align:center; }
       .cost { grid-area: cost; text-align:center; }
       .desc { grid-area: desc; text-align:center; }
       .pop { grid-area: pop; text-align:center; }
-      .top { grid-area:top; gap: 0px; display:none; }
-      .bottom { grid-area:bottom; gap: 0px; display:none; }
+      .top { grid-area:top; gap:0px; display:none; }
+      .bottom { grid-area:bottom; gap:0px; display:none; }
       #desertSurvey { display:none; top:80px; left:900px; height:300px;}
     </style>
   </head>
@@ -87,4 +87,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.47--->
+<!--Version 0.48--->
