--- a/planets.html
+++ b/planets.html
@@ -37,7 +37,7 @@
         background: #1d4b96;
         transition:0.4s;
       }
-      .cell { background: lightgray; padding: 3px; position: relative; overflow:hidden; font-size:80%; background:#a2bbde; }
+      .cell { background: lightgray; padding: 3px; position: relative; overflow:hidden; font-size:80%; background:#97b4de; }
       .cell p { font-family: 'MedievalSharp', cursive; font-size:90%; }
       .name { grid-area: name; text-align:center; }
       .name p { white-space: nowrap; }
@@ -87,4 +87,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.48--->
+<!--Version 0.49--->
