--- a/planets.html
+++ b/planets.html
@@ -42,7 +42,7 @@
       .name { grid-area: name; text-align:center; }
       .name p { white-space: nowrap; }
       .sprite { grid-area:sprite; }
-      .desertSprite { image-rendering:pixelated; }
+      .desertSprite { image-rendering:pixelated; background:grey; border-radius:50%; }
       .habit { grid-area:habit; text-align:center; }
       .cost { grid-area: cost; text-align:center; }
       .desc { grid-area: desc; text-align:center; font-size:100%; }
@@ -87,4 +87,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.51--->
+<!--Version 0.52--->
