--- a/planets.html
+++ b/planets.html
@@ -67,7 +67,7 @@
       <div class="cell sprite"><img class="cell desertSprite" src="desertplanet1.png"></img></div>
       <div class="cell habit"><p> [% Habitability] </p></div>
       <div class="cell cost"><p> [# of Credits in Upkeep Cost] </p></div>
-      <div class="cell desc"><p> This is a desert planet, swirling with dust storms, [yet suitable/tolerable/very inhabitable] to your species. </p></div>
+      <div class="cell desc"><p> Your scans of the planet show nothing but endless seas of dunes, cacti, and the occasional mesa or oasis. It appears to be [habitatable/mostly habitable/nearly inhabitable] to your species.  </p></div>
       <div class="cell pop"><p> This planet contains [#] of Population Units. </p></div>
       <div class="cell bottom"></div>
     </div>
@@ -87,4 +87,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.52--->
+<!--Version 0.53--->
