--- a/planets.html
+++ b/planets.html
@@ -45,7 +45,7 @@
       .desertSprite { image-rendering:pixelated; background:grey; border-radius:50%; }
       .habit { grid-area:habit; text-align:center; }
       .cost { grid-area: cost; text-align:center; }
-      .desc { grid-area: desc; text-align:center; font-size:100%; }
+      .desc { grid-area: left; text-align:center; font-size:85%; }
       .pop { grid-area: pop; text-align:center; }
       .top { grid-area:top; gap:0px; display:none; }
       .bottom { grid-area:bottom; gap:0px; display:none; }
@@ -87,4 +87,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.53--->
+<!--Version 0.54--->
