--- a/planets.html
+++ b/planets.html
@@ -43,7 +43,7 @@
       .name p { white-space: nowrap; }
       .sprite { grid-area:sprite; }
       .desertSprite { image-rendering:pixelated; background:grey; border-radius:50%; }
-      .savvanaSprite { image-rendering:pixelated; background:grey; border-radius:50%; }
+      .savannaSprite { image-rendering:pixelated; background:grey; border-radius:50%; }
       .habit { grid-area:habit; text-align:center; }
       .cost { grid-area: cost; text-align:center; }
       .desc { grid-area: desc; text-align:center; font-size:85%; }
@@ -77,7 +77,7 @@
     <div class="info-box" id="savannaSurvey"> <!--Savanna Planet--->
       <div class="cell top"></div>
       <div class="cell name"><p> [variable] </p></div>
-      <div class="cell sprite"><img class="cell savvanaSprite" src="savannaplanet1.png"></img></div>
+      <div class="cell sprite"><img class="cell savannaSprite" src="savannaplanet1.png"></img></div>
       <div class="cell habit"><p> [% Habitability] </p></div>
       <div class="cell cost"><p> [# of Credits in Upkeep Cost] </p></div>
       <div class="cell desc"><p> The grasslands of this planet stretch to the horizon, dotted with trees, caves, hills, and small oceans. It appears to be [habitable/mostly habitable/nearly inhabitable] to your species. </p></div>
@@ -104,4 +104,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.59--->
+<!--Version 0.60--->
