--- a/planets.html
+++ b/planets.html
@@ -102,9 +102,9 @@
         survey.style.display = "inline-grid";
       }
       function unSurvey(el) {
-        el.parentNode.removeChild(el);
+        el.style.display = "none";
       }
     </script>
   </body>
 </html>
-<!--Version 0.62--->
+<!--Version 0.63--->
